falta dos funsiones

--- a/ejercitando.html
+++ b/ejercitando.html
@@ -27,6 +27,8 @@
                 <input type="number" name="inflacion" id="inflacion" step="0.0001" required><br><br>
                 <input type="submit" value="Cargar"  onclick="cargar()">
                 <button onclick="ordenA()">Lista por Año</button>
+                <button onclick="ordenI()">Lista por inflacion</button>
+                <button onclick="ordenS()">lista por Suceso</button>
               </form>
             
         </div>
