--- a/ejercitando.html
+++ b/ejercitando.html
@@ -18,7 +18,7 @@
                  Agregue 3 botones que permitan imprimir un listado de los datos ordenados por Año, por 
                inflación y por Suceso. 
             -->  
-            <form id="miFormulario" onsubmit="event.preventDefault()">
+            <!--<form id="miFormulario" onsubmit="event.preventDefault()">
                 <label for="sucseso">Suceso:</label>
                 <input type="text" id="suceso" name="suceso" required><br><br>
                 <label for="año" >Año:</label>
@@ -29,7 +29,8 @@
                 <button onclick="ordenA()">Lista por Año</button>
                 <button onclick="ordenI()">Lista por inflacion</button>
                 <button onclick="ordenS()">lista por Suceso</button>
-              </form>
+              </form>-->
+              <input type=”text” class=”autocomplete” id="ingreso" placeholder="Escriba Aqui">
             
         </div>
         <div id="div2">
