--- a/ejercitando.html
+++ b/ejercitando.html
@@ -30,7 +30,7 @@
                 <button onclick="ordenI()">Lista por inflacion</button>
                 <button onclick="ordenS()">lista por Suceso</button>
               </form>-->
-              <input type=”text” class=”autocomplete” id="ingreso" placeholder="Escriba Aqui">
+            <!--<input type=”text” class=”autocomplete” id="ingreso" placeholder="Escriba Aqui">-->     
             
         </div>
         <div id="div2">
